infra/prod-k8s/ingress-svc-deploymeny.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sproutvrprovider-service-ingress
  annotations:
    # Assuming you want to keep this commented out for staging/manual testing
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-ingress-path-type: "Prefix"
    nginx.ingress.kubernetes.io/proxy-body-size: "587m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gateway.146.190.4.121.nip.io
        - account.146.190.4.121.nip.io
      secretName: sproutvr-tls
  rules:
    - host: gateway.146.190.4.121.nip.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sproutvrprovider-service-gateway-clusterip
                port:
                  number: 80
    - host: account.146.190.4.121.nip.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sproutvrprovider-service-account-clusterip
                port:
                  number: 80
